2A/05_Projet_GL/src/test/deca/context/valid/complet/38_return_float_int.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    int x ; 
    float f ;

    float getF() {
        return x ; 
    }
}