2A/05_Projet_GL/src/test/deca/context/invalid/complet/32_aff_non_comp_methodbody.deca
// Description :
//    afféctation float dasn int  dans  MethodBody 
// Resultats :
//    ligne 12 : le float ne peut pas être affecté à int 
// Historique :
//  cree le 16/01/2024

class A {
    float  f ;

    int getX() {
        int x  = f ; 
    }

}